tests/expectations/compiler/libraries/const_args_to_concrete_lib_struct_fail.out
Error [ETYC0372140]: Composite type expected `0` const args, but got `1`
    --> compiler-test:5:16
     |
   5 |         let p: foo_lib::Point::[5u32] = foo_lib::Point::[5u32] { x: 1u32, y: 2u32 };
     |                ^^^^^^^^^^^^^^
Error [ETYC0372140]: Composite expression expected `0` const args, but got `1`
    --> compiler-test:5:41
     |
   5 |         let p: foo_lib::Point::[5u32] = foo_lib::Point::[5u32] { x: 1u32, y: 2u32 };
     |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
